--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -6,7 +6,7 @@
 </section>
 <div class="home-row-title">
     <h2>Timeline</h2>
-    <button class="primary">Add Event</button>
+    <button class="primary" (click)="addWorldElement('event')">Add Event</button>
 </div>
 <div class="home-row">
     @for(worldEvent of filteredEventList; track $index) {
@@ -16,6 +16,7 @@
 
 <div class="home-row-title">
     <h2>World</h2>
+    <button class="primary" (click)="addWorldElement('location')">Add Location</button>
 </div>
 <div class="home-row">
     @for(worldLocation of filteredLocationList; track $index) {
@@ -25,6 +26,7 @@
 
 <div class="home-row-title">
     <h2>Characters</h2>
+    <button class="primary" (click)="addWorldElement('character')">Add Character</button>
 </div>
 <div class="home-row">
     <!-- Character components would go here -->
@@ -35,6 +37,7 @@
 
 <div class="home-row-title">
     <h2>Stories</h2>
+        <button class="primary" (click)="addWorldElement('story')">Add Story</button>
 </div>
 <div class="home-row">
     <!-- Story components would go here -->
