--- a/src/app/world-event/world-event.html
+++ b/src/app/world-event/world-event.html
@@ -1,6 +1,9 @@
 
 <div class="event-thumbnail world-thumbnail" [routerLink]="['/event-details', worldEvent().id]">
-    <h4 class="thumbnail-title">{{ worldEvent().name }}</h4>
+    <div class="thumbnail-header">
+        <h4 class="thumbnail-title">{{ worldEvent().name }}</h4>
+        <button class="thumbnail-delete-button" (click)="deleteEvent(worldEvent().id, $event)">Delete</button>
+    </div>
     <p class="world-date">{{ worldEvent().date }}</p>
     <div class="world-description">{{ worldEvent().description }}</div>
     <!-- <p class="world-location">{{ worldEvent().location.join(', ') }}</p>
