--- a/src/app/world-location/world-location.html
+++ b/src/app/world-location/world-location.html
@@ -1,5 +1,8 @@
 <div class="location-thumbnail world-thumbnail" [routerLink]="['/location-details', worldLocation().id]">
-    <h4 class="thumbnail-title">{{ worldLocation().name }}</h4>
+    <div class="thumbnail-header">
+        <h4 class="thumbnail-title">{{ worldLocation().name }}</h4>
+        <button class="thumbnail-delete-button" (click)="deleteLocation(worldLocation().id, $event)">Delete</button>
+    </div>
     <div class="world-description">{{ worldLocation().description }}</div>
     <!-- <p class="world-location">{{ worldLocation().location.join(', ') }}</p>
     <p class="world-characters">{{ worldLocation().characters.join(', ') }}</p>
