--- a/src/app/world-story/world-story.html
+++ b/src/app/world-story/world-story.html
@@ -1,5 +1,8 @@
 <div class="story-thumbnail world-thumbnail" [routerLink]="['/story-details', worldStory().id]">
-    <h4 class="thumbnail-title">{{ worldStory().title }}</h4>
+    <div class="thumbnail-header">
+        <h4 class="thumbnail-title">{{ worldStory().title }}</h4>
+        <button class="thumbnail-delete-button" (click)="deleteStory(worldStory().id, $event)">Delete</button>
+    </div>
     <div class="world-description">{{ worldStory().description }}</div>
     <div class="thumbnail-tag-container">
     @for (tag of worldStory().tags; track tag) {
