--- a/src/styles.css
+++ b/src/styles.css
@@ -89,11 +89,16 @@ button.primary {
   border-radius: 8px;
 }
 
-.home-row button.primary {
-  margin-right: 4px;
-  display: inline-block;
-  width: auto;
-  background-color: pink;
+.home-row-title button.primary{
+  background-color: var(--g3-color);
+  color: var(--g5-color);
+  transition: background-color 0.5s ease-in-out;
+  transition: box-shadow 0.5s ease-in-out;
+
+  &:hover {
+    background-color: var(--g2-color);
+    box-shadow: var(--shadow-color) 2px 2px 10px;
+  }
 }
 
 .details-button {
@@ -261,6 +266,28 @@ textarea {
 
 .world-thumbnail:hover {
   box-shadow: 2px 2px 15px var(--shadow-color);
+}
+
+.thumbnail-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.thumbnail-delete-button {
+  background: var(--b4-color);
+  color: var(--g5-color);
+  border: none;
+  border-radius: 8px;
+  padding: 5px;
+  margin-inline: 5px;
+  font-size: small;
+  transition: background 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
+
+  &:hover {
+    background: var(--b3-color);
+    box-shadow: var(--shadow-color) 2px 2px 10px;
+  }
 }
 
 .thumbnail-tag-container {
