--- a/src/styles.css
+++ b/src/styles.css
@@ -122,7 +122,7 @@ button.primary {
 /* ============================================================================
    FORM ELEMENTS
    ============================================================================ */
-label, input, textarea {
+input, textarea {
   display: block;
 }
 
@@ -133,10 +133,18 @@ label {
   font-size: 12pt;
 }
 
-input {
+.secondary-label {
+  color: var(--primary-color);
+  text-transform: capitalize;
+  font-weight: bold;
+  font-size: 10pt;
+  margin-bottom: 5px;
+}
+
+input[type="text"] {
   margin-bottom: 15px;
   padding: 10px;
-  width: 400px;
+  width: 300px;
   border-top: none;
   border-right: none;
   border-left: none;
@@ -144,13 +152,17 @@ input {
   background-color: inherit;
 }
 
+input[type="checkbox"] {
+  width: fit-content;
+  margin-left: 10px;
+  margin-right: 5px;
+}
+
 textarea {
   display: block;
   margin-bottom: 15px;
   padding: 10px;
-  width: 400px;
-  min-height: 100px;
-  height: fit-content;
+  /* height: fit-content; */
   border-top: none;
   border-right: none;
   border-left: none;
@@ -158,6 +170,21 @@ textarea {
   /* border-top: solid .3px; */
   border-bottom: solid .3px;
   resize: none;
+
+  &.large-textarea {
+    min-width: 300px;
+    min-height: 150px;
+  }
+
+  &.small-textarea {
+    min-width: 150px;
+    min-height: 50px;
+  }
+}
+
+.form-field {
+  display: flex;
+  width: fit-content;
 }
 
 /* ============================================================================
@@ -322,3 +349,10 @@ textarea {
   display: flex;
   gap: 20px;
 }
+
+.wrap-section {
+  display: flex;
+  flex-wrap: wrap;
+}
+/* grid-template-columns: 1px 1px; */
+/* grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); */
